Set placeholder for paths in the notebooke

--- a/scripts/analysis.ipynb
+++ b/scripts/analysis.ipynb
@@ -37,16 +37,15 @@
    "outputs": [],
    "source": [
     "# provide the path to the data and the lysimeter objects\n",
-    "# note that this repo does not contain the data.\n",
-    "# please visit: ???\n",
-    "## this is the path to the dir where you saved your downloaded data from dataverse\n",
+    "# note that this repo does not contain the data, you need to download it from the dataverse\n",
+    "# and provide the path to the data in the DATA_DIR\n",
     "DATA_DIR = Path(\n",
-    "    \"/Users/alireza_amani/Desktop/PhD_files/Lysimeter_project_info/DataVerse/processed/\"\n",
+    "    \"???\"\n",
     ")\n",
     "\n",
-    "## this is the path to the dir where the lysimeter objects are saved\n",
+    "## this is the path to the dir where the lysimeter objects are saved (outputs from the other notebook)\n",
     "RESULT_DIR = Path(\n",
-    "    \"/Users/alireza_amani/Desktop/PhD_files/Manuscripts/DeepPercolation_2024/results_/\"\n",
+    "    \"???\"\n",
     ")\n",
     "\n",
     "\n",
