--- a/scripts/event_identification.ipynb
+++ b/scripts/event_identification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,10 +37,9 @@
     "\n",
     "# provide the paths to the data and the output directory\n",
     "# note that this repo does not contain the data.\n",
-    "# please visit: ???\n",
-    "## this is the path to the dir where you saved your downloaded data from dataverse\n",
+    "# you need to download the data from the dataverse and provide the path to the data directory here\n",
     "DATA_DIR = Path(\n",
-    "    \"/Users/alireza_amani/Desktop/PhD_files/Lysimeter_project_info/DataVerse/processed/\"\n",
+    "    \"???\"\n",
     ")\n",
     "\n",
     "paths = {\n",
@@ -51,7 +50,7 @@
     "    \"data_soil_temp\": DATA_DIR / Path(\"FieldSoilTemperature_4Enclosures_4Lysimeters_201806_202210.parquet\"),\n",
     "\n",
     "    # this is where we save the Lysimeter objects, to be used in the analysis notebook\n",
-    "    \"save_dir\": Path(\"/Users/alireza_amani/Desktop/PhD_files/Manuscripts/DeepPercolation_2024/results_\")\n",
+    "    \"save_dir\": Path(\"/Users/???\")\n",
     "\n",
     "}\n",
     "\n",
