--- a/scripts/event_identification.ipynb
+++ b/scripts/event_identification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# cd to the directory where the data is stored\n",
-    "%cd /Users/alireza_amani/Desktop/PhD_files/Lysimeter_project_info/DataVerse/processed/\n",
+    "# %cd /Users/alireza_amani/Desktop/PhD_files/Lysimeter_project_info/DataVerse/processed/\n",
     "\n",
     "# provide the paths to the data and the output directory\n",
     "# note that this repo does not contain the data.\n",
     "# you need to download the data from the dataverse and provide the path to the data directory here\n",
     "DATA_DIR = Path(\n",
-    "    \"???\"\n",
+    "    \"../data/\"\n",
     ")\n",
     "\n",
     "paths = {\n",
@@ -50,7 +50,7 @@
     "    \"data_soil_temp\": DATA_DIR / Path(\"FieldSoilTemperature_4Enclosures_4Lysimeters_201806_202210.parquet\"),\n",
     "\n",
     "    # this is where we save the Lysimeter objects, to be used in the analysis notebook\n",
-    "    \"save_dir\": Path(\"/Users/???\")\n",
+    "    \"save_dir\": Path(\"../results/\")\n",
     "\n",
     "}\n",
     "\n",
@@ -64,12 +64,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading"
+    "# Reading"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,20 +119,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# preparing the time-series needed to create the LysimeterEvents object\n",
     "l1_percolation_tseries = data_percolation.loc[\n",
     "    data_percolation[\"Lysimeter Number\"] == 1, \"Reading\"\n",
-    "].asfreq(\"H\") # necessary to explicitly set the frequency to hourly\n",
+    "].asfreq(\"h\").copy() # necessary to explicitly set the frequency to hourly\n",
+    "\n",
     "rainfall_tseries = data_meteo_hourly.loc[\n",
     "    data_meteo_hourly[\"Variable\"] == \"Rainfall\", \"Reading\"\n",
-    "].asfreq(\"H\")\n",
+    "].asfreq(\"h\").copy()\n",
+    "\n",
     "snowdepth_tseries = data_meteo_daily.loc[\n",
     "    data_meteo_daily[\"Variable\"] == \"Snow depth\", \"Reading\"\n",
-    "]\n",
+    "].copy()\n",
     "\n",
     "## here we are using the soil moisture and temperature at the surface of the\n",
     "## lysimeter to create the soil_sensors_df (75 mm depth)\n",
@@ -212,8 +214,8 @@
     "surface_soil_df.loc[\"L1_Event_14\", \"prior_temp\"] = 4.6\n",
     "\n",
     "# replace the attribute in the LysimeterEvents object\n",
-    "surface_soil_df.loc[:, \"prior_vwc\"].fillna(np.nan, inplace=True)\n",
-    "surface_soil_df.loc[:, \"prior_temp\"].fillna(np.nan, inplace=True)\n",
+    "surface_soil_df[\"prior_vwc\"] = surface_soil_df[\"prior_vwc\"].astype(float)\n",
+    "surface_soil_df[\"prior_temp\"] = surface_soil_df[\"prior_temp\"].astype(float)\n",
     "L1_events.surface_soil_df = surface_soil_df.copy()\n",
     "\n",
     "# pickle L1_events\n",
@@ -236,17 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# preparing the time-series needed to create the LysimeterEvents object\n",
     "l2_percolation_tseries = data_percolation.loc[\n",
     "    data_percolation[\"Lysimeter Number\"] == 2, \"Reading\"\n",
-    "].asfreq(\"H\") # necessary to explicitly set the frequency to hourly\n",
+    "].asfreq(\"h\") # necessary to explicitly set the frequency to hourly\n",
     "rainfall_tseries = data_meteo_hourly.loc[\n",
     "    data_meteo_hourly[\"Variable\"] == \"Rainfall\", \"Reading\"\n",
-    "].asfreq(\"H\")\n",
+    "].asfreq(\"h\")\n",
     "snowdepth_tseries = data_meteo_daily.loc[\n",
     "    data_meteo_daily[\"Variable\"] == \"Snow depth\", \"Reading\"\n",
     "]\n",
@@ -327,8 +329,8 @@
     "\n",
     "\n",
     "# replace the attribute in the LysimeterEvents object\n",
-    "surface_soil_df.loc[:, \"prior_vwc\"].fillna(np.nan, inplace=True)\n",
-    "surface_soil_df.loc[:, \"prior_temp\"].fillna(np.nan, inplace=True)\n",
+    "surface_soil_df[\"prior_vwc\"] = surface_soil_df[\"prior_vwc\"].astype(float)\n",
+    "surface_soil_df[\"prior_temp\"] = surface_soil_df[\"prior_temp\"].astype(float)\n",
     "L2_events.surface_soil_df = surface_soil_df.copy()\n",
     "\n",
     "# pickle L2_events\n",
@@ -351,17 +353,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# preparing the time-series needed to create the LysimeterEvents object\n",
     "l3_percolation_tseries = data_percolation.loc[\n",
     "    data_percolation[\"Lysimeter Number\"] == 3, \"Reading\"\n",
-    "].asfreq(\"H\") # necessary to explicitly set the frequency to hourly\n",
+    "].asfreq(\"h\") # necessary to explicitly set the frequency to hourly\n",
     "rainfall_tseries = data_meteo_hourly.loc[\n",
     "    data_meteo_hourly[\"Variable\"] == \"Rainfall\", \"Reading\"\n",
-    "].asfreq(\"H\")\n",
+    "].asfreq(\"h\")\n",
     "snowdepth_tseries = data_meteo_daily.loc[\n",
     "    data_meteo_daily[\"Variable\"] == \"Snow depth\", \"Reading\"\n",
     "]\n",
@@ -422,8 +424,8 @@
     "L3_events.surface_soil_df = surface_soil_df.copy()\n",
     "\n",
     "# pickle L3_events\n",
-    "surface_soil_df.loc[:, \"prior_vwc\"].fillna(np.nan, inplace=True)\n",
-    "surface_soil_df.loc[:, \"prior_temp\"].fillna(np.nan, inplace=True)\n",
+    "surface_soil_df[\"prior_vwc\"] = surface_soil_df[\"prior_vwc\"].astype(float)\n",
+    "surface_soil_df[\"prior_temp\"] = surface_soil_df[\"prior_temp\"].astype(float)\n",
     "L3_events.to_pickle(paths[\"save_dir\"] / \"L3_events.pkl\")\n",
     "\n",
     "### del all objects created in this cell\n",
@@ -443,17 +445,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# preparing the time-series needed to create the LysimeterEvents object\n",
     "l4_percolation_tseries = data_percolation.loc[\n",
     "    data_percolation[\"Lysimeter Number\"] == 4, \"Reading\"\n",
-    "].asfreq(\"H\") # necessary to explicitly set the frequency to hourly\n",
+    "].asfreq(\"h\") # necessary to explicitly set the frequency to hourly\n",
     "rainfall_tseries = data_meteo_hourly.loc[\n",
     "    data_meteo_hourly[\"Variable\"] == \"Rainfall\", \"Reading\"\n",
-    "].asfreq(\"H\")\n",
+    "].asfreq(\"h\")\n",
     "snowdepth_tseries = data_meteo_daily.loc[\n",
     "    data_meteo_daily[\"Variable\"] == \"Snow depth\", \"Reading\"\n",
     "]\n",
@@ -517,8 +519,8 @@
     "\n",
     "\n",
     "# replace the attribute in the LysimeterEvents object\n",
-    "surface_soil_df.loc[:, \"prior_vwc\"].fillna(np.nan, inplace=True)\n",
-    "surface_soil_df.loc[:, \"prior_temp\"].fillna(np.nan, inplace=True)\n",
+    "surface_soil_df[\"prior_vwc\"] = surface_soil_df[\"prior_vwc\"].astype(float)\n",
+    "surface_soil_df[\"prior_temp\"] = surface_soil_df[\"prior_temp\"].astype(float)\n",
     "L4_events.surface_soil_df = surface_soil_df.copy()\n",
     "\n",
     "\n",
@@ -684,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
