address pandas future warnings

--- a/scripts/analysis.ipynb
+++ b/scripts/analysis.ipynb
@@ -40,12 +40,12 @@
     "# note that this repo does not contain the data, you need to download it from the dataverse\n",
     "# and provide the path to the data in the DATA_DIR\n",
     "DATA_DIR = Path(\n",
-    "    \"???\"\n",
+    "    \"../data/\"\n",
     ")\n",
     "\n",
     "## this is the path to the dir where the lysimeter objects are saved (outputs from the other notebook)\n",
     "RESULT_DIR = Path(\n",
-    "    \"???\"\n",
+    "    \"../results/\"\n",
     ")\n",
     "\n",
     "\n",
@@ -63,10 +63,10 @@
     "    \"L4_events\": RESULT_DIR / Path(\"L4_events.pkl\"),\n",
     "\n",
     "    # svs output for the input water flux\n",
-    "    \"svs_waterinput\": RESULT_DIR / Path(\"svsjan11_HourlyOutput_EnsAve.csv\"),\n",
+    "    \"svs_waterinput\": RESULT_DIR / Path(\"InputWater_SVSoutput_ensAve.csv\"),\n",
     "\n",
     "    # output dir for saving figures\n",
-    "    \"fig_dir\": Path(\"../figures_/\"),\n",
+    "    \"fig_dir\": Path(\"../figures/\"),\n",
     "}\n",
     "\n",
     "\n",
@@ -236,7 +236,10 @@
     "for data in [L1_events.surface_soil_df, L2_events.surface_soil_df, L3_events.surface_soil_df, L4_events.surface_soil_df]:\n",
     "    for event_label, row in data.iterrows():\n",
     "        for col in surface_soil_cols:\n",
-    "            percolation_events.loc[event_label, col] = row[surface_soil_cols[col][0]]\n",
+    "            value = row[surface_soil_cols[col][0]]\n",
+    "            if pd.isna(value):  # Check if it's NaT or another missing value\n",
+    "                value = np.nan     # Replace NaT with 0.0 (or another suitable float)\n",
+    "            percolation_events.loc[event_label, col] = value\n",
     "\n",
     "percolation_events[\"event_label\"] = percolation_events.index\n",
     "\n",
@@ -347,7 +350,7 @@
     "# which characteristics to consider:\n",
     "# volume, duration, ave intensity, ave peak intensity, ave water/percolation ratio\n",
     "data_warm_cold_stats = percolation_events.copy()\n",
-    "data_warm_cold_stats[\"group\"] = np.nan\n",
+    "data_warm_cold_stats[\"group\"] = \"\"\n",
     "data_warm_cold_stats.loc[cold_events, \"group\"] = \"Cold Season\"\n",
     "data_warm_cold_stats.loc[warm_events, \"group\"] = \"Warm Season\"\n",
     "\n",
@@ -380,6 +383,7 @@
     "    ax=axes[0, 0], palette=[WARM_GREY, SLATE_GREY],\n",
     "    showfliers=True, dodge=False, width=BWIDHT, linewidth=LWIDTH,\n",
     "    fliersize=MSIZE,\n",
+    "    hue=\"group\", legend=False,\n",
     ")\n",
     "\n",
     "sns.boxplot(\n",
@@ -387,6 +391,7 @@
     "    ax=axes[0, 1], palette=[WARM_GREY, SLATE_GREY],\n",
     "    showfliers=True, dodge=False, width=BWIDHT, linewidth=LWIDTH,\n",
     "    fliersize=MSIZE,\n",
+    "    hue=\"group\", legend=False,\n",
     ")\n",
     "\n",
     "sns.boxplot(\n",
@@ -394,19 +399,21 @@
     "    ax=axes[1, 0], palette=[WARM_GREY, SLATE_GREY], linewidth=LWIDTH,\n",
     "    showfliers=True, dodge=False, width=BWIDHT,\n",
     "    fliersize=MSIZE,\n",
+    "    hue=\"group\", legend=False,\n",
     ")\n",
     "\n",
     "sns.boxplot(\n",
     "    x=\"group\", y=\"percolation_ave_intensity_mmh\", data=data_warm_cold_stats,\n",
     "    ax=axes[1, 1], palette=[WARM_GREY, SLATE_GREY], linewidth=LWIDTH,\n",
     "    showfliers=False, dodge=False, width=BWIDHT, fliersize=MSIZE,\n",
+    "    hue=\"group\", legend=False,\n",
     ")\n",
     "\n",
     "# set labels\n",
     "axes[0, 0].set_ylabel(\"Volume (mm)\", fontsize=FONTSIZE)\n",
     "axes[0, 1].set_ylabel(\"Duration (days)\", fontsize=FONTSIZE)\n",
-    "axes[1, 0].set_ylabel(\"Peak Intensity (mm $\\mathregular{h^{-1}}$)\", fontsize=FONTSIZE)\n",
-    "axes[1, 1].set_ylabel(\"Average Intensity (mm $\\mathregular{h^{-1}}$)\", fontsize=FONTSIZE)\n",
+    "axes[1, 0].set_ylabel(r\"Peak Intensity (mm $\\mathregular{h^{-1}}$)\", fontsize=FONTSIZE)\n",
+    "axes[1, 1].set_ylabel(r\"Average Intensity (mm $\\mathregular{h^{-1}}$)\", fontsize=FONTSIZE)\n",
     "\n",
     "# set xlabel\n",
     "for ax_ in axes.flatten():\n",
@@ -3666,7 +3673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
