--- a/scripts/event_identification.ipynb
+++ b/scripts/event_identification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,11 +572,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "L1_events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# load the LysimeterEvents objects for one of the lysimeters\n",
     "L1_events = pd.read_pickle(paths[\"save_dir\"] / \"L1_events.pkl\")\n",
     "\n",
     "# lets choose an event for L1\n",
-    "event_index = \"L1_Event_14\"\n",
+    "event_index = \"L1_Event_10\"\n",
     "event_start_dt, event_end_dt = L1_events.events_df.loc[\n",
     "    event_index, [\"event_start_dt\", \"event_end_dt\"]\n",
     "]\n",
