--- a/scopus_search/script/plot_results.ipynb
+++ b/scopus_search/script/plot_results.ipynb
@@ -33,9 +33,9 @@
    "outputs": [],
    "source": [
     "paths = {\n",
-    "    \"percolation_search\": Path(\"../results/percolation_Scopus_results.csv\"),\n",
-    "    \"runoff_search\": Path(\"../results/runoff_Scopus_results.csv\"),\n",
-    "    \"et_search\": Path(\"../results/et_Scopus_results.csv\"),\n",
+    "    \"percolation_search\": Path(\"./percolation_Scopus_results.csv\"),\n",
+    "    \"runoff_search\": Path(\"./runoff_Scopus_results.csv\"),\n",
+    "    \"et_search\": Path(\"./et_Scopus_results.csv\"),\n",
     "}\n",
     "\n",
     "# set plotting parameters\n",
@@ -204,13 +204,6 @@
     "# plt.savefig(SAVE_PATH, dpi=DPI)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# ."
-   ]
   }
  ],
  "metadata": {
@@ -229,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
