update plot_results colors

--- a/scopus_search/script/plot_results.ipynb
+++ b/scopus_search/script/plot_results.ipynb
@@ -46,11 +46,19 @@
     "plt.rcParams['axes.labelweight'] = 'bold'\n",
     "plt.rcParams['axes.titleweight'] = 'bold'\n",
     "\n",
-    "# colors\n",
+    "## colors\n",
     "WARM_GREY = '#A9A9A9'\n",
     "SLATE_GREY = '#708090'\n",
     "LIGHT_GREY = \"#D3D3D3\"\n",
     "CHARCOAL = '#36454F'\n",
+    "TEAL = '#008080'\n",
+    "GOLD_BROWN = '#CC9966'\n",
+    "LIGHT_BLUE = '#6699CC'\n",
+    "\n",
+    "WARM_GREY = '#707070'  # Make this darker if using Option 2\n",
+    "SLATE_GREY = '#8090A0'  # Make this cooler if using Option 2\n",
+    "\n",
+    "DARK_PURPLE = '#663366'\n",
     "\n",
     "# assertions\n",
     "for path in paths.values():\n",
@@ -113,7 +121,7 @@
     "# constants\n",
     "FIGSIZE = (14, 11)\n",
     "DPI = 1000\n",
-    "SAVE_PATH = \"../results/LitSearch_DpRunEt3.pdf\"\n",
+    "SAVE_PATH = \"./LitSearch_DpRunEt3.pdf\"\n",
     "FONTSIZE = 37\n",
     "FONTSIZE_LEGEND = FONTSIZE - 12\n",
     "LINEWIDTH = 4\n",
@@ -125,7 +133,7 @@
     "    x=\"YEAR\",\n",
     "    y=\"COUNT\",\n",
     "    data=percolation_articles,\n",
-    "    color=CHARCOAL,\n",
+    "    color=LIGHT_BLUE,\n",
     "    linewidth=LINEWIDTH,\n",
     "    ax=ax,\n",
     "    label=\"Percolation\",\n",
@@ -137,7 +145,7 @@
     "    x=\"YEAR\",\n",
     "    y=\"COUNT\",\n",
     "    data=runoff_articles,\n",
-    "    color=SLATE_GREY,\n",
+    "    color=DARK_PURPLE,\n",
     "    linewidth=LINEWIDTH,\n",
     "    ax=ax,\n",
     "    label=\"Runoff\",\n",
@@ -149,7 +157,7 @@
     "    x=\"YEAR\",\n",
     "    y=\"COUNT\",\n",
     "    data=et_articles,\n",
-    "    color=WARM_GREY,\n",
+    "    color=GOLD_BROWN,\n",
     "    linewidth=LINEWIDTH,\n",
     "    ax=ax,\n",
     "    label=\"Evapotranspiration\",\n",
@@ -168,7 +176,7 @@
     "# Adding inset plot\n",
     "inset_ax = fig.add_axes([0.17, 0.525, 0.25, 0.25]) # x, y, width, height\n",
     "\n",
-    "inset_ax.bar(total_counts.keys(), total_counts.values(), color=[CHARCOAL, SLATE_GREY, WARM_GREY])\n",
+    "inset_ax.bar(total_counts.keys(), total_counts.values(), color=[LIGHT_BLUE, DARK_PURPLE, GOLD_BROWN])\n",
     "inset_ax.tick_params(axis='x', rotation=45, labelsize=FONTSIZE_LEGEND - 3)\n",
     "inset_ax.tick_params(axis='y', labelsize=FONTSIZE_LEGEND - 3)\n",
     "inset_ax.set_ylabel('', fontsize=FONTSIZE_LEGEND)\n",
@@ -201,7 +209,7 @@
     "\n",
     "\n",
     "plt.tight_layout()\n",
-    "# plt.savefig(SAVE_PATH, dpi=DPI)\n",
+    "plt.savefig(SAVE_PATH, dpi=DPI)\n",
     "plt.show()"
    ]
   }
