update scripts (colors, ...)

--- a/scopus_search/script/plot_results.ipynb
+++ b/scopus_search/script/plot_results.ipynb
@@ -101,7 +101,7 @@
     "with open(paths[\"et_search\"], \"r\") as f:\n",
     "    et_query = f.readlines()[2]\n",
     "\n",
-    "# print the queries\n",
+    "# print the queries (as an example)\n",
     "print(f\"Percolation query: {percolation_query}\")"
    ]
   },
