--- a/scripts/event_identification.ipynb
+++ b/scripts/event_identification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,83 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import user_functions as uf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mInit signature:\u001b[0m\n",
+      "\u001b[0muf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLysimeterEvents\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mpercolation_hourly_tseries\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mrainfall_hourly_tseries\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0msnowdepth_cm_daily_tseries\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0msoil_sensors_df\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m     \n",
+      "This class represents a lysimeter where we store info about its percolation\n",
+      "events.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "percolation_hourly_tseries : pd.Series\n",
+      "    A pandas series containing hourly percolation data (mm/h).\n",
+      "\n",
+      "rainfall_hourly_tseries : pd.Series\n",
+      "    A pandas series containing hourly rainfall data (mm/h).\n",
+      "\n",
+      "snowdepth_cm_daily_tseries : pd.Series\n",
+      "    A pandas series containing daily snow depth data. Units MUST be cm.\n",
+      "\n",
+      "Attributes\n",
+      "----------\n",
+      "percolation_hourly_tseries : pd.Series\n",
+      "    A pandas series containing hourly percolation data.\n",
+      "\n",
+      "events_df : pd.DataFrame\n",
+      "    A pandas dataframe containing the events and their characteristics.\n",
+      "\n",
+      "rainfall_events_df : pd.DataFrame\n",
+      "    A pandas dataframe containing the rainfall events and their\n",
+      "\n",
+      "snow_events_df : pd.DataFrame\n",
+      "    A pandas dataframe containing the snow events and their characteristics.\n",
+      "\n",
+      "\n",
+      "Methods\n",
+      "-------\n",
+      "id_events(\n",
+      "    min_rate_mmh : float = 0.01, forward_window_length_h : int = 24*3,\n",
+      "    min_vol_mm : float = 2, verbose : bool = False\n",
+      "):\n",
+      "    Go through the percolation tseries and identify events based on the\n",
+      "    specified criteria. The identified events are stored in the events_df\n",
+      "    dataframe.\n",
+      "\n",
+      "id_rainfall_events(prewindow_h : int = 24):\n",
+      "    Go through the rainfall tseries and identify rainfall events associated\n",
+      "    with the percolation events. The identified rainfall events are stored\n",
+      "    in the rainfall_events_df dataframe.\n",
+      "\n",
+      "calculate_snow_melt(pre_window_days : int = 5, verbose : bool = False):\n",
+      "    Calculate the snow melt for each event based on the snow depth and\n",
+      "    snow density data.\n",
+      "\n",
+      "checks():\n",
+      "    Check the percolation tseries for any issues.\n",
+      "\u001b[0;31mFile:\u001b[0m           ~/Desktop/Work/Manuscripts/Efforts/DeepPercolation/codes/DeepPercolation_HP2024/scripts/user_functions.py\n",
+      "\u001b[0;31mType:\u001b[0m           type\n",
+      "\u001b[0;31mSubclasses:\u001b[0m     "
+     ]
+    }
+   ],
+   "source": [
+    "uf.LysimeterEvents?"
    ]
   },
   {
